--- a/detail.html
+++ b/detail.html
@@ -35,6 +35,8 @@
   </div>
 </footer>
 
+<!-- SCRIPTS -->
+<script type="module" src="script/main.js"></script>
 <script src="script/detail.js"></script>
 
 </body>
