--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
     <div class="card-content">
 
       <div class="has-text-centered">
-        <i class="fa-solid fa-trophy m-5 is-size-1"></i>
+        <i class="fa-solid fa-trophy m-5 is-size-1 has-text-warning"></i>
         <div class="logo-title">Amphora Typology Database</div>
       </div>
 
@@ -67,7 +67,7 @@
         </div>
 
         <div class="field">
-          <button class="button is-link is-fullwidth" type="submit">
+          <button class="button is-medium is-primary is-fullwidth my-5" type="submit">
             Log In
           </button>
         </div>
