Fix, burger-menu function

--- a/catalogue.html
+++ b/catalogue.html
@@ -25,7 +25,7 @@
       <strong>WetNote</strong>
     </a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+    <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
@@ -94,17 +94,17 @@
               <span>4 Columns</span>
             </button>
 
-            <button id="viewGrid3" class="button is-black">
+            <button id="viewGrid3" class="button is-black is-black">
               <i class="fa-solid fa-table-cells-large mr-2"></i>
               <span>3 Columns</span>
             </button>
 
-            <button id="toggleAdvancedFilters" class="button is-link">
+            <button id="toggleAdvancedFilters" class="button is-link is-light">
               <i class="fa-solid fa-filter mr-2"></i>
               <span>Advanced Filters</span>
             </button>
 
-            <button id="clearFilters" class="button is-link is-light">
+            <button id="clearFilters" class="button is-danger is-light">
               <i class="fa-solid fa-filter-circle-xmark mr-2"></i>
               <span>Clear Filters</span>
             </button>
