Add, partners section

--- a/catalogue.html
+++ b/catalogue.html
@@ -252,46 +252,177 @@
     <div class="field is-horizontal">
       <!-- Height -->
       <div class="field mr-2">
-        <label class="label">Height greater than (cm)</label>
+        <label class="label">Height</label>
         <div class="control">
-          <input id="filterHeightMin" class="input" type="number" placeholder="e.g. 45">
+          <div class="field has-addons">
+            <p class="control" title="greater than">
+              <a class="button is-static">
+                <span>min &nbsp;</span>
+                <i class="fa-solid fa-greater-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterHeightMin" class="input" type="number" placeholder="greater than - e.g. 15">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
         </div>
-      </div>
 
-      <div class="field mr-2">
-        <label class="label">Height less than (cm)</label>
+        <br>
+
         <div class="control">
-          <input id="filterHeightMax" class="input" type="number" placeholder="e.g. 45">
+          <div class="field has-addons">
+            <p class="control" title="less than">
+              <a class="button is-static">
+                <span>max &nbsp;</span>
+                <i class="fa-solid fa-less-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterHeightMax" class="input" type="number" placeholder="less than - e.g. 45">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
         </div>
       </div>
 
       <!-- Width -->
       <div class="field mr-2">
-        <label class="label">Width greater than (cm)</label>
+        <label class="label">Width</label>
         <div class="control">
-          <input id="filterWidthMin" class="input" type="number" placeholder="e.g. 45">
+          <div class="field has-addons">
+            <p class="control" title="greater than">
+              <a class="button is-static">
+                <span>min &nbsp;</span>
+                <i class="fa-solid fa-greater-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterWidthMin" class="input" type="number" placeholder="greater than - e.g. 15">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
         </div>
-      </div>
 
-      <div class="field mr-2">
-        <label class="label">Width less than (cm)</label>
+        <br>
+
         <div class="control">
-          <input id="filterWidthMax" class="input" type="number" placeholder="e.g. 45">
+          <div class="field has-addons">
+            <p class="control" title="less than">
+              <a class="button is-static">
+                <span>max &nbsp;</span>
+                <i class="fa-solid fa-less-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterWidthMax" class="input" type="number" placeholder="less than - e.g. 45">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
         </div>
       </div>
 
       <!-- Rim Diameter -->
       <div class="field mr-2">
-        <label class="label">Rim diameter greater than (cm)</label>
+        <label class="label">Rim Diameter</label>
         <div class="control">
-          <input id="filterRimDiameterMin" class="input" type="number" placeholder="e.g. 25">
+          <div class="field has-addons">
+            <p class="control" title="greater than">
+              <a class="button is-static">
+                <span>min &nbsp;</span>
+                <i class="fa-solid fa-greater-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterRimDiameterMin" class="input" type="number" placeholder="e.g. 5">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
+        </div>
+
+        <br>
+
+        <div class="control">
+          <div class="field has-addons">
+            <p class="control" title="less than">
+              <a class="button is-static">
+                <span>max &nbsp;</span>
+                <i class="fa-solid fa-less-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterRimDiameterMax" class="input" type="number" placeholder="e.g. 25">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                cm.
+              </a>
+            </p>
+          </div>
         </div>
       </div>
 
+      <!-- Capacity -->
       <div class="field mr-2">
-        <label class="label">Rim diameter less than (cm)</label>
+        <label class="label">Capacity</label>
         <div class="control">
-          <input id="filterRimDiameterMax" class="input" type="number" placeholder="e.g. 25">
+          <div class="field has-addons">
+            <p class="control" title="greater than">
+              <a class="button is-static">
+                <span>min &nbsp;</span>
+                <i class="fa-solid fa-greater-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterCapacityMin" class="input" type="number" placeholder="e.g. 5">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                liters
+              </a>
+            </p>
+          </div>
+        </div>
+
+        <br>
+
+        <div class="control">
+          <div class="field has-addons">
+            <p class="control" title="less than">
+              <a class="button is-static">
+                <span>max &nbsp;</span>
+                <i class="fa-solid fa-less-than"></i>
+              </a>
+            </p>
+            <p class="control">
+              <input id="filterCapacityMax" class="input" type="number" placeholder="e.g. 25">
+            </p>
+            <p class="control">
+              <a class="button is-static">
+                liters
+              </a>
+            </p>
+          </div>
         </div>
       </div>
 
