--- a/detail.html
+++ b/detail.html
@@ -21,20 +21,19 @@
   </div>
 </section>
 
-<!-- FOOTER -->
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>WetNote</strong> by <a href="https://nevcan.com" target="_blank">Nevcan Uludaş</a>.
-      The source code is licensed <a href="https://opensource.org/license/mit" target="_blank">MIT</a>.
-    </p>
-
+<section class="section">
+  <div class="container has-text-centered">
     <p>
       Data sources: <a href="https://potsherd.net/atlas/Class/AMPH" target="_blank">Potsherd Atlas</a>, <a href="https://archaeologydataservice.ac.uk/archives/view/amphora_ahrb_2005/cat_amph.cfm" target="_blank">ArchAIDE ADS Amphora Dataset</a>
     </p>
-
   </div>
-</footer>
+</section>
+
+<!-- PARTNERS -->
+<div id="Partners"></div>
+
+<!-- FOOTER -->
+<footer id="Footer"></footer>
 
 <!-- SCRIPTS -->
 <script type="module" src="script/main.js"></script>
