--- a/documentation.html
+++ b/documentation.html
@@ -454,15 +454,11 @@
   </section>
 </main>
 
+<!-- PARTNERS -->
+<div id="Partners"></div>
+
 <!-- FOOTER -->
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>WetNote</strong> by <a href="https://nevcan.com" target="_blank">Nevcan Uludaş</a>.
-      The source code is licensed <a href="https://opensource.org/license/mit" target="_blank">MIT</a>.
-    </p>
-  </div>
-</footer>
+<div id="Footer"></div>
 
 <!-- SCRIPTS -->
 <script type="module" src="script/main.js"></script>
