--- a/map.html
+++ b/map.html
@@ -19,63 +19,9 @@
 <body>
 
 <!-- NAVIGATION BAR -->
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand px-5">
-    <a class="navbar-item has-text-white" href="index.html">
-      <i class="fa-solid fa-trophy mr-2"></i>
-      <strong>WetNote</strong>
-    </a>
+<nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
-    <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="index.html" data-page="index">Home</a>
-      <a class="navbar-item" href="documentation.html" data-page="documentation">Documentation</a>
-      <a class="navbar-item" href="catalogue.html" data-page="catalogue">Catalogue</a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" data-page="tools">Tools</a>
-        
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="amphorai.html" data-page="amphorai">✨ AmphorAI</a>
-          <a class="navbar-item" href="map.html" data-page="map">🗺️ Map</a>
-          <a class="navbar-item" href="model-training.html" data-page="model-training">🧠 Model Training</a>
-        </div>
-      </div>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" data-page="more">More</a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="about.html" data-page="about">About</a>
-          <a class="navbar-item" href="jobs.html" data-page="jobs">Jobs</a>
-          <a class="navbar-item" href="contact.html" data-page="contact">Contact</a>
-          <hr class="navbar-divider">
-          <a class="navbar-item" href="https://docs.google.com/forms/d/e/1FAIpQLSfbTx27QH2m3SD-bia105rbArpOyCsnMBsDlagzJQ3V-eI3wA/viewform?usp=publish-editor" target="_blank">
-            <i class="fa-solid fa-bug"></i>
-            <span>Report an issue</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-small is-primary" href="login.html">Log in</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</nav>
-
+<!-- MAP FILTER -->
 <div id="mapFilterSection" class="has-background-dark p-4 mb-4">
   <h3 class="title is-5 has-text-white">Filter Amphoras on Map</h3>
   <div class="field is-horizontal">
@@ -117,16 +63,14 @@
   </div>
 </div>
 
-<div class="container">
-  <section class="section">
-    <div id="amphoraMap" style="height: 600px; width: 100%;"></div>
+<!-- MAP -->
+<section class="section p-0">
+  <div id="amphoraMap" style="height: 550px; width: 100%;"></div>
 
-    <!-- Leaflet CSS and JS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-  </section>
-</div>
+  <!-- Leaflet CSS and JS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+</section>
 
 <!-- PARTNERS -->
 <div id="Partners"></div>
