Fix, general html structure

--- a/amphorai.html
+++ b/amphorai.html
@@ -21,8 +21,9 @@
 <!-- NAVIGATION BAR -->
 <nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
-<div class="container">
-  <section class="section">
+<!-- AMPHORAI SECTION -->
+<section class="section">
+  <div class="container">
     <div class="columns is-multiline">
 
       <!-- IMAGE UPLOAD -->
@@ -89,8 +90,8 @@
       </div>
 
     </div>
-  </section>
-</div>
+  </div>
+</section>
 
 <!-- PARTNERS -->
 <div id="Partners"></div>
