--- a/catalogue.html
+++ b/catalogue.html
@@ -522,8 +522,10 @@
     </div>
   </div>
 </div>
+
+<!-- CATALOGUE VIEW -->
 <section class="section">
-  <div class="container"></div>
+  <div class="container">
     <div id="amphoraList" class="columns is-multiline"></div>
   </div>
 </section>
