--- a/detail.html
+++ b/detail.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 
+<!-- DETAILS PAGE -->
 <section class="section">
   <div class="container">
     <a href="catalogue.html" class="button is-small is-link is-light">
-      <i class="fas fa-arrow-left mr-2"></i> Back to catalogue
+      <i class="fas fa-arrow-left mr-2"></i> Back to Catalogue
     </a>
 
     <div id="details" class="section"></div>
@@ -21,6 +22,7 @@
   </div>
 </section>
 
+<!-- DATA SOURCE -->
 <section class="section">
   <div class="container has-text-centered">
     <p>
