--- a/jobs.html
+++ b/jobs.html
@@ -21,46 +21,47 @@
 <!-- NAVIGATION BAR -->
 <nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
-<div class="container">
-  <section class="section">
+<!-- JOBS SECTION -->
+<section class="section">
+  <div class="container">
     <div class="columns is-multiline">
       <div class="column is-12">
-  <h1 class="title is-3">Join Our Volunteer Team</h1>
-  <p class="mb-4">
-    WetNote is seeking passionate volunteers to contribute to our **Amphora Typology Database**. 
-    If you are interested in archaeology, ceramics, or data curation, this is a great opportunity to participate in an international, open-access project.
-  </p>
+        <h1 class="title is-3">Join Our Volunteer Team</h1>
+        <p class="mb-4">
+          WetNote is seeking passionate volunteers to contribute to our **Amphora Typology Database**. 
+          If you are interested in archaeology, ceramics, or data curation, this is a great opportunity to participate in an international, open-access project.
+        </p>
 
-  <h2 class="title is-4 mt-5">Who We're Looking For</h2>
-  <ul>
-    <li>Archaeology students or enthusiasts with knowledge of ancient ceramics</li>
-    <li>Researchers or volunteers interested in typology and cataloguing</li>
-    <li>People with experience in data entry, photography, or 3D modeling</li>
-    <li>Anyone passionate about preserving and sharing historical data</li>
-  </ul>
+        <h2 class="title is-4 mt-5">Who We're Looking For</h2>
+        <ul>
+          <li>Archaeology students or enthusiasts with knowledge of ancient ceramics</li>
+          <li>Researchers or volunteers interested in typology and cataloguing</li>
+          <li>People with experience in data entry, photography, or 3D modeling</li>
+          <li>Anyone passionate about preserving and sharing historical data</li>
+        </ul>
 
-  <h2 class="title is-4 mt-5">How You Can Contribute</h2>
-  <ol>
-    <li>Help with morphological descriptions of amphoras (rim, neck, body, base, handles)</li>
-    <li>Compare and verify forms against literature and existing typologies</li>
-    <li>Assist in creating catalogue entries including images, drawings, and 3D models</li>
-    <li>Support data cleaning and validation for the JSON database</li>
-    <li>Provide feedback or suggestions for improving the catalogue interface</li>
-  </ol>
+        <h2 class="title is-4 mt-5">How You Can Contribute</h2>
+        <ol>
+          <li>Help with morphological descriptions of amphoras (rim, neck, body, base, handles)</li>
+          <li>Compare and verify forms against literature and existing typologies</li>
+          <li>Assist in creating catalogue entries including images, drawings, and 3D models</li>
+          <li>Support data cleaning and validation for the JSON database</li>
+          <li>Provide feedback or suggestions for improving the catalogue interface</li>
+        </ol>
 
-  <h2 class="title is-4 mt-5">Get Involved</h2>
-  <p>
-    If you are interested in contributing, please <a href="contact.html">contact us</a> with your background and area of interest. 
-    We welcome volunteers from all around the world.
-  </p>
+        <h2 class="title is-4 mt-5">Get Involved</h2>
+        <p>
+          If you are interested in contributing, please <a href="contact.html">contact us</a> with your background and area of interest. 
+          We welcome volunteers from all around the world.
+        </p>
 
-  <div class="notification is-info mt-5">
-    <strong>Note:</strong> This is a voluntary position. Your contributions will be acknowledged in the database and related publications.
-  </div>
-</div>
+        <div class="notification is-info mt-5">
+          <strong>Note:</strong> This is a voluntary position. Your contributions will be acknowledged in the database and related publications.
+        </div>
+      </div>
     </div>
-  </section>
-</div>
+  </div>
+</section>
 
 <!-- PARTNERS -->
 <div id="Partners"></div>
