--- a/map.html
+++ b/map.html
@@ -22,7 +22,7 @@
 <nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
 <!-- MAP FILTER -->
-<div id="mapFilterSection" class="has-background-dark p-4 mb-4">
+<div id="mapFilterSection" class="has-background-dark p-4">
   <h3 class="title is-5 has-text-white">Filter Amphoras on Map</h3>
   <div class="field is-horizontal">
 
@@ -64,7 +64,7 @@
 </div>
 
 <!-- MAP -->
-<section class="section p-0">
+<section class="section p-3">
   <div id="amphoraMap" style="height: 550px; width: 100%;"></div>
 
   <!-- Leaflet CSS and JS -->
