--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,9 @@
 <!-- NAVIGATION BAR -->
 <nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
-<div class="container">
-  <section class="section">
+<!-- CONTACT SECTION -->
+<section class="section">
+  <div class="container">
     <div class="columns is-multiline">
       <div class="column is-12 has-text-centered">
         <h1 class="title is-3">Contact Us</h1>
@@ -69,8 +70,8 @@
         </p>
       </div>
     </div>
-  </section>
-</div>
+  </div>
+</section>
 
 <!-- PARTNERS -->
 <div id="Partners"></div>
