--- a/documentation.html
+++ b/documentation.html
@@ -21,7 +21,7 @@
 
     <div class="columns is-multiline">
 
-      <div class="column-is-12">
+      <div class="column is-12">
         <p class="mb-5">
           This documentation provides a practical guide to understanding amphora morphology, typological comparison, and effective use of the filtering system. 
           By learning how each shape component is defined — rim, neck, body, base, and handles — you can navigate the catalogue efficiently and identify amphora types with greater accuracy. 
