--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <!-- NAVIGATION BAR -->
 <nav id="Navbar" class="navbar" role="navigation" aria-label="main navigation"></nav>
 
+<!-- HOME PAGE -->
 <section class="section">
   <div class="container">
     <div class="columns is-multiline">
